ispell.el: Use expanded values of personal dictionary for process restart checks.
(ispell-internal-change-dictionary):
 Improve ispell process restart checks by using expanded values for ispell
  personal dictionary and for related restart check.

(ispell-start-process):
 * Remove apparently redundant code that seems better handled from
  (ispell-internal-change-dictionary)
 * No longer need to expand ispell personal dictionary, it is already
   expanded.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -2,7 +2,8 @@
 
 	* textmodes/ispell.el (ispell-init-process)
 	(ispell-start-process): Make sure personal dictionary name is
-	expanded after initial `default-directory' value (Bug#13019).
+	expanded after initial `default-directory' value. Use expanded
+	values for keep/restart checks (Bug#13019).
 
 2012-12-03  Jay Belanger  <jay.p.belanger@gmail.com>
 
