--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-03  Juri Linkov  <juri@jurta.org>
+
+	* info.el (Info-fontify-node): Don't hide the last newline.
+	(Bug#12272)
+
 2012-12-01  Leo Liu  <sdl.web@gmail.com>
 
 	* files.el (dir-locals-read-from-file): Check file non-empty
