--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-03  Juri Linkov  <juri@jurta.org>
+
+	* sort.el (delete-duplicate-lines): New command.  (Bug#13032)
+
 2012-12-03  Agustín Martín Domingo  <agustin.martin@hispalinux.es>
 
 	* textmodes/ispell.el (ispell-init-process)
