--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-04  Chong Yidong  <cyd@gnu.org>
 
+	* terminal.el: Move to obsolete/.
+
 	* longlines.el: Move to obsolete/.
 
 	* vc/ediff-diff.el (ediff-extract-diffs, ediff-extract-diffs3):
