--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-04  Glenn Morris  <rgm@gnu.org>
+
+	* mail/rmailsum.el (rmail-new-summary): Tweak for
+	rmail-maybe-display-summary changing buffer.  (Bug#13066)
+
 2012-12-03  Juri Linkov  <juri@jurta.org>
 
 	* info.el (Info-fontify-node): Don't hide the last newline.
