--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-12-04  Eli Zaretskii  <eliz@gnu.org>
+
+	* fileio.c (file_name_as_directory, directory_file_name) [DOS_NT]:
+	Encode the file name before passing it to dostounix_filename, in
+	case it will downcase it (under w32-downcase-file-names).
+	(Bug#12933)
+
 2012-12-01  Chong Yidong  <cyd@gnu.org>
 
 	* fileio.c (Vauto_save_list_file_name): Doc fix.
