--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-05  Chong Yidong  <cyd@gnu.org>
+
+	* lists.texi (Plist Access): Move put example to Symbol Plists.
+
+	* symbols.texi (Standard Properties): Fix typo.
+
 2012-12-02  Chong Yidong  <cyd@gnu.org>
 
 	* symbols.texi (Symbol Properties): New node.
