--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-05  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/octave-mod.el (octave-mark-block): Move out of tokens and
+	fix open-paren-like token test (bug#12785).
+
 2012-12-04  Glenn Morris  <rgm@gnu.org>
 
 	* mail/rmailsum.el (rmail-new-summary): Tweak for
