--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-05  Eli Zaretskii  <eliz@gnu.org>
+
+	* callproc.c (Fcall_process_region) [!HAVE_MKSTEMP]: If mktemp
+	fails, signal an error instead of continuing with an empty
+	string.  (Bug#13079)
+
 2012-12-04  Eli Zaretskii  <eliz@gnu.org>
 
 	* fileio.c (file_name_as_directory, directory_file_name) [DOS_NT]:
