--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-07  Juanma Barranquero  <lekktu@gmail.com>
+
+	* vc/vc-hooks.el (vc-state): Doc fix.
+
 2012-12-06  Glenn Morris  <rgm@gnu.org>
 
 	* mail/rmail.el (rmail-maybe-display-summary):
