--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/cl-macs.el (cl-tagbody): New macro.
+
 2012-12-06  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	Further cleanup of the "cl-" namespace.  Fit CL in 80 columns.
