--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-07  Michael Heerdegen  <michael_heerdegen@web.de>
+
+	* emacs-lisp/debug.el (debug): Fix hard-coded frame counts (bug#10025).
+	Virtually backported from trunk.
+
 2012-12-07  Juanma Barranquero  <lekktu@gmail.com>
 
 	* vc/vc-hooks.el (vc-state): Doc fix.
