Default to mboxrd in Rmail, allow mboxo as an option
* lisp/mail/unrmail.el (unrmail-mbox-format): New option. 
(batch-unrmail, unrmail): Doc fixes.
(unrmail): Respect unrmail-mbox-format.
* lisp/mail/rmail.el (rmail-mbox-format): New option.
(rmail-show-message-1): Respect rmail-mbox-format.

* etc/NEWS: Related edits.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -58,6 +58,14 @@ amounts of data into the ERC input.
 ** MH-E has been updated to MH-E version 8.4.
 See MH-E-NEWS for details.
 
+---
+** The unrmail command converts from BABYL to mboxrd rather than mboxo.
+Customize `unrmail-mbox-format' to change this.
+
+---
+** Similarly, customize `rmail-mbox-format' to influence some minor aspects
+of how Rmail displays non-MIME messages.
+
 +++
 ** New function `ses-rename-cell' to give SES cells arbitrary names.
 
