--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-12-07  Glenn Morris  <rgm@gnu.org>
+
+	* mail/unrmail.el (unrmail-mbox-format): New option.  (Bug#6574)
+	(batch-unrmail, unrmail): Doc fixes.
+	(unrmail): Respect unrmail-mbox-format.
+	* mail/rmail.el (rmail-mbox-format): New option.
+	(rmail-show-message-1): Respect rmail-mbox-format.
+
 2012-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/cl-macs.el (cl-tagbody): New macro.
