--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-07  Martin Rudalics  <rudalics@gmx.at>
+
+	* editfns.c (Fcompare_buffer_substrings): Reword doc-string.
+
 2012-12-05  Eli Zaretskii  <eliz@gnu.org>
 
 	* callproc.c (Fcall_process_region) [!HAVE_MKSTEMP]: If mktemp
