--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* indent.c (Fvertical_motion): If a display string will be
+	displayed on the left or the right margin, don't consider it as a
+	factor in cursor positioning.  (Bug#13108)
+
 2012-12-07  Martin Rudalics  <rudalics@gmx.at>
 
 	* editfns.c (Fcompare_buffer_substrings): Reword doc-string.
