--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-07  Eli Zaretskii  <eliz@gnu.org>
+
+	* textmodes/texinfo.el (texinfo-enable-quote-envs): Add
+	"smallexample".
+
 2012-12-07  Le Wang  <l26wang@gmail.com>
 
 	* hilit-chg.el (hilit-chg-set-face-on-change): Don't burp in
