--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-08  Christopher Schmidt  <christopher@ch.ristopher.com>
+
+	* lread.c (Vload_source_file_function): Doc fix (Bug#11647).
+
 2012-12-07  Eli Zaretskii  <eliz@gnu.org>
 
 	* indent.c (Fvertical_motion): If a display string will be
