--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-08  Dani Moncayo  <dmoncayo@gmail.com>
+
+	* killing.texi (Deletion): Doc fix (Bug#12748).
+
 2012-12-03  Juanma Barranquero  <lekktu@gmail.com>
 
 	* vc1-xtra.texi (General VC Options): Remove obsolete reference
