--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-08  Dani Moncayo <dmoncayo@gmail.com>
+
+	* simple.el (just-one-space): Doc fix.
+
 2012-12-07  Eli Zaretskii  <eliz@gnu.org>
 
 	* textmodes/texinfo.el (texinfo-enable-quote-envs): Add
