--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2012-12-08  Fabrice Popineau  <fabrice.popineau@gmail.com>
+
+	* w32fns.c (cache_system_info): Cast sysinfo_cache.dwPageSize to
+	DWORD_PTR, for compatibility with 64-bit builds.
+
+	* w32.c (_PROCESS_MEMORY_COUNTERS_EX): 
+	(GetProcessWorkingSetSize_Proc, get_process_working_set_size)
+	(system_process_attributes): Use SIZE_T rather than DWORD, for
+	compatibility with 64-bit builds.
+
 2012-12-08  Christopher Schmidt  <christopher@ch.ristopher.com>
 
 	* lread.c (Vload_source_file_function): Doc fix (Bug#11647).
