--- a/lisp/mh-e/ChangeLog
+++ b/lisp/mh-e/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-08  Jeffrey C Honig  <jch@honig.net>
+
+	* mh-comp.el: Insure that mail-header-separator is set before
+	invoking any mml functions.  (closes SF #270).
+
 2012-11-25  Bill Wohler  <wohler@newt.com>
 
 	* mh-e.el (mh-version):  Add +bzr to version.
