--- a/lisp/mh-e/ChangeLog
+++ b/lisp/mh-e/ChangeLog
@@ -1,3 +1,10 @@
+2012-12-10  Jeffrey C Honig  <jch@honig.net>
+
+	* mh-folder.el (mh-inc-folder): Revert SF #2321115, SF bugs/250
+	which processed pending deletes and refiles.  Call to
+	mh-process-or-undo-commands to insure that pending changes are
+	properly tagged after including new mail.  (Closes SF bugs/271).
+
 2012-12-08  Jeffrey C Honig  <jch@honig.net>
 
 	* mh-comp.el: Insure that mail-header-separator is set before
