--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-10  Daniel Colascione  <dancol@dancol.org>
+
+	* configure.ac (W32_RES, W32_RES_LINK, WINDRES): Teach the cygw32
+	build how to compile Windows resource files; use these variables
+	to tell src/Makefile.in how and whether to compile resources.
+
 2012-12-05  Glenn Morris  <rgm@gnu.org>
 
 	* configure.ac: Handle info/ files with or without ".info" extension.
