--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-10  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
+
+	* configure.ac (inotify): New option.
+	(HAVE_INOTIFY): Test for inotify.
+
 2012-12-09  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* configure.ac: Fix source command in .gdbinit.
