--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-10  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
+
+	* automated/inotify-test.el: New test.
+
 2012-12-02  Chong Yidong  <cyd@gnu.org>
 
 	* automated/ruby-mode-tests.el
