--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-10  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in (obj): Add w32notify.o.  Add missing X and Unix
+	sources.
+
 2012-12-02  Kevin Ryde  <user42@zip.com.au>
 
 	* etags.c (Lisp_functions): Skip (defvar foo) declarations unless
@@ -103,10 +108,6 @@
 	(decode_options): Use alt_display.  Explain why.
 	(main): Retry connection with alt_display if connection with main
 	display fails.
-
-2012-10-07  Eli Zaretskii  <eliz@gnu.org>
-
-	* makefile.w32-in (obj): Add w32notify.o.
 
 2012-10-01  Fabrice Popineau  <fabrice.popineau@gmail.com>
 
