--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-10  Eli Zaretskii  <eliz@gnu.org>
+
+	* subr.el (w32notify-handle-event): New function.
+	(inotify-handle-event): Doc fix.
+
 2012-12-10  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
 
 	* subr.el (inotify-event-p, inotify-handle-event): New functions.
@@ -2243,10 +2248,6 @@
 	(rst-indent-literal-normal, rst-indent-literal-minimized)
 	(rst-indent-comment): Correct :version tag.
 	(rst-official-cvs-rev): Correct version string.
-
-2012-10-07  Eli Zaretskii  <eliz@gnu.org>
-
-	* subr.el (w32notify-handle-event): New function.
 
 2012-10-07  Glenn Morris  <rgm@gnu.org>
 
