--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-10  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* configure.ac (HAVE_INOTIFY): Speed up configure-time test.
+	There's no need to test for any of three inotify functions,
+	since we use all three.  Check for just the first one.
+
 2012-12-10  Daniel Colascione  <dancol@dancol.org>
 
 	* configure.ac (W32_RES, W32_RES_LINK, WINDRES): Teach the cygw32
