Fix cygw32 build break

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,8 @@
 2012-12-10  Daniel Colascione  <dancol@dancol.org>
 
+	* w32term.c, keyboard.c: Fix build break in cygw32 by omitting
+	Windows file notification functionality unless WINDOWSNT.
+
 	* w32gui.h (hprevinst, lpCmdLine, nCmdShow): Remove unused
 	declarations.
 
