--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* hi-lock.el (hi-lock--regexps-at-point): Fix boundary case for
+	font-lock as well as when there's no text-property.
+
 2012-12-10  Jambunathan K  <kjambunathan@gmail.com>
 
 	* hi-lock.el: Refine the choice of default face.
