--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-10  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* fileio.c (Fvisited_file_modtime): Return (-1 ...) for nonexistent
+	files, fixing a regression from 24.2.
+
 2012-12-08  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* nsterm.m (fd_handler:): FD_ZERO fds (Bug#13103).
