--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -2,6 +2,7 @@
 
 	* fileio.c (Fvisited_file_modtime): Return (-1 ...) for nonexistent
 	files, fixing a regression from 24.2.
+	(Fverify_visited_file_modtime): Don't read uninitialized st.st_size.
 
 2012-12-08  Jan Djärv  <jan.h.d@swipnet.se>
 
