--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-11  Juanma Barranquero  <lekktu@gmail.com>
+
+	* config.nt: Sync with autogen/config.in.
+	(HAVE_DECL_UNSETENV, HAVE_SIG2STR, VOID_UNSETENV): New macros.
+	(ULIMIT_BREAK_VALUE): Remove.
+
 2012-12-10  Daniel Colascione  <dancol@dancol.org>
 
 	* emacs.rc: Use forward slashes in relative paths in order to
