--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-11  Glenn Morris  <rgm@gnu.org>
+
+	* progmodes/f90.el (f90-line-continued, f90-indent-region):
+	Treat preprocessor lines embedded in continuations like comments.
+	(f90-indent-line): Special-case preprocessor lines.  (Bug#13138)
+
 2012-12-11  Jay Belanger  <jay.p.belanger@gmail.com>
 
 	* calc/calc.el (calc-standard-date-formats):  Add more date
