--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-11  Glenn Morris  <rgm@gnu.org>
+
+	* automated/f90.el (f90-test-bug13138): New test.
+
 2012-12-10  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
 
 	* automated/inotify-test.el: New test.
