--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-11  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	* progmodes/python.el (python-skeleton-class)
+	(python-skeleton-def): Do not add space after defun name.
+
 2012-12-09  Chong Yidong  <cyd@gnu.org>
 
 	* simple.el (set-mark-default-inactive): Mark as obsolete, for
