--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-11  Eli Zaretskii  <eliz@gnu.org>
+
+	* inotify.c (Finotify_add_watch): Rename decoded_file_name to
+	encoded_file_name, which is what it is.
+
 2012-12-11  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Consistently use marker_position and marker_byte_position.
