--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-11  Eli Zaretskii  <eliz@gnu.org>
+
+	* search.c (search_buffer): Check the inverse translations of each
+	character in pattern when the buffer being searched is unibyte.
+	(Bug#13084)
+
 2012-12-10  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* fileio.c (Fvisited_file_modtime): Return (-1 ...) for nonexistent
