--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,6 +1,6 @@
 2012-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
-	* control.texi (Pattern maching case statement): New node.
+	* control.texi (Pattern matching case statement): New node.
 
 2012-12-06  Stefan Monnier  <monnier@iro.umontreal.ca>
 
