--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-11  Alan Mackenzie  <acm@muc.de>
+
+	Make CC Mode not hang when _some_ lines end in CRLF.  Bug #11841.
+	* progmodes/cc-engine.el (c-backward-comments): Add code to work
+	around `forward-comment' not recognizing ^M as whitespace.
+
 2012-12-11  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	* progmodes/python.el (python-skeleton-class)
