--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-12  David Cadé  <codename68@gmail.com>
+
+	* mpc.el (mpc-format): Use truncate-string-to-width (bug#13143).
+
 2012-12-12  Jonas Bernoulli  <jonas@bernoul.li>
 
 	* lisp/emacs-lisp/eieio.el: Prettier object pretty-printing (bug#13115).
