--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-12  Eric Ludlam  <zappo@gnu.org>
+
+	* srecode.texi: New file, imported from CEDET trunk.
+
 2012-12-12  Bastien Guerry  <bzg@gnu.org>
 
 	* org.texi (Summary, Code block specific header arguments)
