--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-12  Glenn Morris  <rgm@gnu.org>
+
+	* info/dir: Add srecode.
+
 2012-12-11  Nicolas Richard  <theonewiththeevillook@yahoo.fr>  (tiny change)
 
 	* Makefile.in (install-info, uninstall): Ensure make's messages
