--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,13 @@
+2012-12-12  Glenn Morris  <rgm@gnu.org>
+
+	* srecode.texi: Small edits.  Set copyright to FSF, add explicit
+	GFDL 1.3+ license, fix up index.
+	* Makefile.in (INFO_TARGETS, DVI_TARGETS, PDF_TARGETS): Add srecode.
+	(srecode, $(buildinfodir)/srecode$(INFO_EXT), srecode.dvi)
+	(srecode.pdf): New targets.
+	* makefile.w32-in (INFO_TARGETS, DVI_TARGETS, clean): Add srecode.
+	($(infodir)/srecode$(INFO_EXT), srecode.dvi): New targets.
+
 2012-12-12  Eric Ludlam  <zappo@gnu.org>
 
 	* srecode.texi: New file, imported from CEDET trunk.
