--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-12  Andreas Schwab  <schwab@suse.de>
+
+	* Makefile.in (install-info): Use `${MAKE} -s' for echo-info.
+	(uninstall): Likewise.
+
 2012-12-12  Glenn Morris  <rgm@gnu.org>
 
 	* info/dir: Add srecode.
