--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-13  Eric Ludlam  <zappo@gnu.org>
+	    David Ponce  <david@dponce.com>
+	    Richard Kim  <emacs18@gmail.com>
+
+	* bovine.texi: New file, imported from CEDET trunk.
+
 2012-12-12  Glenn Morris  <rgm@gnu.org>
 
 	* flymake.texi (Customizable variables, Locating the buildfile):
