Add bovine manual to build process
* doc/misc/bovine.texi: Small edits.  Set copyright to FSF, update license to
GFDL 1.3+, remove empty index.

* doc/misc/Makefile.in (INFO_TARGETS, DVI_TARGETS, PDF_TARGETS): Add bovine.
(bovine, $(buildinfodir)/bovine$(INFO_EXT), bovine.dvi, bovine.pdf):
New targets.

* doc/misc/makefile.w32-in (INFO_TARGETS, DVI_TARGETS, clean): Add bovine.
($(infodir)/bovine$(INFO_EXT), bovine.dvi): New targets.

* info/dir: Add bovine.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-13  Glenn Morris  <rgm@gnu.org>
+
+	* info/dir: Add bovine.
+
 2012-12-12  Andreas Schwab  <schwab@suse.de>
 
 	* Makefile.in (install-info): Use `${MAKE} -s' for echo-info.
