--- a/doc/misc/bovine.texi
+++ b/doc/misc/bovine.texi
@@ -1,6 +1,6 @@
 \input texinfo  @c -*-texinfo-*-
 @c %**start of header
-@setfilename bovine.info
+@setfilename ../../info/bovine
 @set TITLE  Bovine parser development
 @set AUTHOR Eric M. Ludlam, David Ponce, and Richard Y. Kim
 @settitle @value{TITLE}
@@ -23,29 +23,26 @@
 @c %**end of header
 
 @copying
-This manual documents Bovine parser development in Semantic
-
-Copyright @copyright{} 1999, 2000, 2001, 2002, 2003, 2004 Eric M. Ludlam
-Copyright @copyright{} 2001, 2002, 2003, 2004 David Ponce
-Copyright @copyright{} 2002, 2003 Richard Y. Kim
+Copyright @copyright{} 1999-2004, 2012 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.1 or
-any later version published by the Free Software Foundation; with the
-Invariant Sections being list their titles, with the Front-Cover Texts
-being list, and with the Back-Cover Texts being list.  A copy of the
-license is included in the section entitled ``GNU Free Documentation
-License''.
+under the terms of the GNU Free Documentation License, Version 1.3 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, with the Front-Cover texts being ``A GNU Manual,''
+and with the Back-Cover Texts as in (a) below.  A copy of the license
+is included in the section entitled ``GNU Free Documentation License''.
+
+(a) The FSF's Back-Cover Text is: ``You have the freedom to copy and
+modify this GNU manual.  Buying copies from the FSF supports it in
+developing GNU and promoting software freedom.''
 @end quotation
 @end copying
 
-@ifinfo
-@dircategory Emacs
+@dircategory Emacs misc features
 @direntry
-* Semantic bovine parser development: (bovine).
+* Bovine: (bovine).             Semantic bovine parser development.
 @end direntry
-@end ifinfo
 
 @iftex
 @finalout
@@ -54,28 +51,19 @@ License''.
 @c @setchapternewpage odd
 @c @setchapternewpage off
 
-@ifinfo
-This file documents parser development with the bovine parser generator
-@emph{Infrastructure for parser based text analysis in Emacs}
-
-Copyright @copyright{} 1999, 2000, 2001, 2002, 2003, 2004 @value{AUTHOR}
-@end ifinfo
-
 @titlepage
 @sp 10
 @title @value{TITLE}
 @author by @value{AUTHOR}
-@vskip 0pt plus 1 fill
-Copyright @copyright{} 1999, 2000, 2001, 2002, 2003, 2004 @value{AUTHOR}
 @page
 @vskip 0pt plus 1 fill
 @insertcopying
 @end titlepage
 @page
 
-@c MACRO inclusion
-@include semanticheader.texi
-
+@macro semantic{}
+@i{Semantic}
+@end macro
 
 @c *************************************************************************
 @c @ Document
@@ -97,13 +85,17 @@ extension.  When compiled, the contents is converted into a file of
 the form @file{NAME-by.el}.  This, in turn is byte compiled.
 @inforef{top, Grammar Framework Manual, grammar-fw}.
 
+@ifnottex
+@insertcopying
+@end ifnottex
+
 @menu
 * Starting Rules::              The starting rules for the grammar.
-* Bovine Grammar Rules::        Rules used to parse a language
-* Optional Lambda Expression::  Actions to take when a rule is matched
-* Bovine Examples::             Simple Samples
-* GNU Free Documentation License::  
-* Index::                       
+* Bovine Grammar Rules::        Rules used to parse a language.
+* Optional Lambda Expression::  Actions to take when a rule is matched.
+* Bovine Examples::             Simple Samples.
+* GNU Free Documentation License::  The license for this documentation.
+@c * Index::
 @end menu
 
 @node Starting Rules
@@ -160,9 +152,9 @@ semantic-appdev}.
 means that a syntactic token of class @code{FOO} must be matched.
 
 @menu
-* How Lexical Tokens Match::    
-* Grammar-to-Lisp Details::     
-* Order of components in rules::  
+* How Lexical Tokens Match::
+* Grammar-to-Lisp Details::
+* Order of components in rules::
 @end menu
 
 @node How Lexical Tokens Match
@@ -462,11 +454,14 @@ which would return
 @node GNU Free Documentation License
 @appendix GNU Free Documentation License
 
-@include fdl.texi
+@include doclicense.texi
 
+@c There is nothing to index at the moment.
+@ignore
 @node Index
 @unnumbered Index
 @printindex cp
+@end ignore
 
 @iftex
 @contents
