Import wisent manual from CEDET trunk
Ref
http://lists.gnu.org/archive/html/emacs-devel/2012-11/msg00419.html
and preceding discussion

Imported from
bzr://cedet.bzr.sourceforge.net/bzrroot/cedet/code/trunk
doc/texi/semantic/wisent.texi

bzr log shows (very) tiny change from authors with assignments:
David Engster <dengste@eml.cc>

and from:
emacsman@users.sourceforge.net

--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -12,7 +12,7 @@
 	    David Ponce  <david@dponce.com>
 	    Richard Kim  <emacs18@gmail.com>
 
-	* bovine.texi: New file, imported from CEDET trunk.
+	* bovine.texi, wisent.texi: New files, imported from CEDET trunk.
 
 2012-12-12  Glenn Morris  <rgm@gnu.org>
 
